--- a/css/styles.css
+++ b/css/styles.css
@@ -18,11 +18,13 @@ h3 {font-family: 'Poppins', sans-serif; font-size: 30px; font-weight: 500;}
 
 h4 {font-family: 'Poppins', sans-serif; font-size: 25px; font-weight: 500;}
 
-h5 {font-family: 'Poppins', sans-serif; font-size: 15px; font-weight: 500;}
+h5 {font-family: 'Poppins', sans-serif; font-size: 16px; font-weight: 500;}
 
 a, button, ::placeholder {font-family: 'Poppins', sans-serif; font-size: 16px; font-weight: 500; text-decoration: none; color: black;}
 
 p {font-family: 'Open Sans', sans-serif; font-size: 16px; font-weight: 400;}
+
+input {border: none; border-bottom: 2px solid;}
 
 label {font-family: 'Open Sans', sans-serif; font-size: 15px; font-weight: 400;}
 
@@ -41,34 +43,98 @@ button:hover {cursor: pointer;}
 
 
 /* header */
-.header-section {box-shadow: 0px 2px 10px rgb(209, 209, 209); position: fixed; margin-bottom: 100%; width: 100%;}
-.header-section .container {margin: auto; padding: 30px 0; }
+.header-section {box-shadow: 0px 2px 10px grey; position: fixed; width: 100%; background-color: white; z-index: 1;}
+
+.header-section .container {margin: auto; padding: 30px 0;}
 
 .navbar {column-gap: 30px;}
 
 .fa-bars {display: none;}
 
-.menu-toggled {display: none;}
+.burgermenu {display: none;}
+.burgermenu {width: 100%; text-align: center; }
+.burgermenu li {padding: 20px 0; border-bottom: 1px solid rgb(192, 192, 192);}
+.mobile-menu {display: none;}
 
 @media (max-width: 1366px) {
+  
     .header-section a, .header-section button {font-size: 15px;}
 }
 
 @media (max-width: 1100px) {
+    .mobile-menu {display: block;}
     .header-section .navbar {display: none;}
     .fa-bars {display: block; color: var(--blue); font-size: 35px;}
-    .menu-toggled {width: 100%; text-align: center; }
-    .menu-toggled li {padding: 20px 0; border-bottom: 1px solid rgb(192, 192, 192);}
+
     .header-section .navbar .no-border {border-bottom: none;}
-    
 
 }
 
 @media (max-width: 900px) {
+
     .header-section i, .header-section img { scale: 0.85}
 }
 
+
+
 /* end header */
+
+.banner-section {background-image: url(../images/banner.jpg); background-repeat: no-repeat; background-position: center; background-size: cover; height: 795px;  width: 100%; padding-top: 120px;}
+
+.banner-section .container {margin: auto; padding-top: 100px;}
+
+.banner-section .container .text-logo {color: white; line-height: 50px;}
+
+.banner-section .container .text-logo img {padding-top: 5px; padding-right: 20px;}
+
+.banner-section .container .text-logo h5 {letter-spacing: 3px; padding: 15px 0;}
+
+.banner-section .container .col2 {background-color: white; padding: 40px; margin-right: 40px; padding-bottom: 73px; height: 100%;}
+
+.banner-section .container .col2 h3 {padding: 0;}
+
+.banner-section .container .col2 h3 span {border-bottom: 3px solid var(--blue); padding: 0;}
+
+.banner-section .container .col2 form.d-flex{flex-direction: column;}
+
+.banner-section .container .col2 h3 {margin-bottom: 20px;}
+
+.banner-section .container .col2 label {padding-bottom: 20px; padding-top: 10px;}
+
+.banner-section .container .col2 .send-logo {padding: 30px 15px;}
+
+@media (max-width: 1240px){
+    .banner-section {padding-top: 60px; height: 804px;}
+    .banner-section .container {flex-direction: column;  width: 100%; scale: 0.85; padding: 0; align-items: center;}
+    .banner-section .container .col1 {text-align: center;  margin: auto; margin-bottom: 43px;}
+    .banner-section .container .col2 {padding-bottom: 5px; margin-right: 0; margin: auto;}
+    .banner-section .container .text-logo img {padding: 0;}
+    .banner-section h2.d-flex {column-gap: 10px;}
+}
+
+@media (max-width: 900px){
+    .banner-section .container .col1 h2 {font-size: 0.85;}
+    .banner-section {height: 817px;}
+    .banner-section .col1 h2.d-flex {margin-bottom: 15px;}
+    .banner-section .col2 button {scale: 0.85}
+    .banner-section .col2 img{scale: 0.85; }
+    .banner-section .container .col1 h2 {scale: 0.85;}
+    .banner-section .container h5 {font-size: 15px; letter-spacing: 2px;}
+ 
+}
+
+@media (max-width: 450px) {
+    .banner-section .container .col1 .first-heading {line-height: 65px; padding: 0;}
+    .banner-section h2.d-flex img {margin-bottom: 15px;}
+    .banner-section h2.d-flex {flex-direction: column; margin-bottom: 0px;}
+    .banner-section {height: auto;}
+    .banner-section .container {padding: 0;}
+    .send-logo img {scale: 0.85;}
+    .banner-section .col2.form {padding: 30px; }
+    .banner-section .col2 h3 {text-align: center;}
+    .banner-section .container .col2 .send-logo { flex-direction: column; row-gap: 10px; padding: 0px; padding-top: 20px;}
+
+}
 
 /* banner */
 
