--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 
 ul {list-style: none;}
 
-
+img { display: inline-block; max-width: 100%;}
 
 h1 {font-family: 'Poppins', sans-serif; font-size: 80px; font-weight: 500;}
 
@@ -116,8 +116,6 @@ button:hover {cursor: pointer;}
     .banner-section .container .col1 h2 {font-size: 0.85;}
     .banner-section {height: 817px;}
     .banner-section .col1 h2.d-flex {margin-bottom: 15px;}
-    .banner-section .col2 button {scale: 0.85}
-    .banner-section .col2 img{scale: 0.85; }
     .banner-section .container .col1 h2 {scale: 0.85;}
     .banner-section .container h5 {font-size: 15px; letter-spacing: 2px;}
  
@@ -138,3 +136,35 @@ button:hover {cursor: pointer;}
 
 /* banner */
 
+/* carousel */
+.brands-slider-section {background-color: #fafafa;}
+
+.brands-slider-section .container {margin: auto; padding: 30px 0;}
+
+
+.brands-slider-section .container .item {display: flex; justify-content: center; width: 300px; padding-top: 3vh;}
+
+.brands-slider-section .container .carousel .densemfs {padding-top: 2vh;}
+
+.brands-slider-section .container .carousel .kindadense {padding-top: 1vh;}
+
+.brands-slider-section .container .carousel .slick-next::before {font-family: 'FontAwesome'; content: '\f054'; color:  var(--blue);}
+
+.brands-slider-section .container .carousel .slick-prev::before {font-family: 'FontAwesome'; content: '\f053';color:  var(--blue); }
+
+.brands-slider-section .container .carousel .slick-dots {display: none;}
+
+
+
+/* carousel */
+
+/* longtext */
+
+.text-section .container {margin: auto; text-align: center; padding: 120px 0; display: flex; flex-direction: column; row-gap: 40px;}
+.text-section .container span {color: var(--lightblue);}
+
+@media (max-width: 1366px) {
+    .text-section .container h4 {scale: 0.85;}
+}
+
+/* longtext */
