--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,10 @@
 
 }
 
+.blue {color: var(--blue);}
+
+.lightblue {color: var(--lightblue);}
+
 ul {list-style: none;}
 
 img { display: inline-block; max-width: 100%;}
@@ -18,7 +22,7 @@ h3 {font-family: 'Poppins', sans-serif; font-size: 30px; font-weight: 500;}
 
 h4 {font-family: 'Poppins', sans-serif; font-size: 25px; font-weight: 500;}
 
-h5 {font-family: 'Poppins', sans-serif; font-size: 16px; font-weight: 500;}
+h5 {font-family: 'Poppins', sans-serif; font-size: 16px; font-weight: 500; letter-spacing: 4px; padding: 0;}
 
 a, button, ::placeholder {font-family: 'Poppins', sans-serif; font-size: 16px; font-weight: 500; text-decoration: none; color: black;}
 
@@ -36,7 +40,7 @@ label {font-family: 'Open Sans', sans-serif; font-size: 15px; font-weight: 400;}
 
 .space-between {justify-content: space-between;}
 
-button {background-color: var(--blue); padding: 10px 35px; border: none; border-radius: 15px; color: white;}
+button {background-color: var(--blue); padding: 10px 35px; border: none; border-radius: 15px; color: white; margin-top: 2px;}
 
 button:hover {cursor: pointer;}
 
@@ -104,7 +108,7 @@ button:hover {cursor: pointer;}
 .banner-section .container .col2 .send-logo {padding: 30px 15px;}
 
 @media (max-width: 1240px){
-    .banner-section {padding-top: 60px; height: 804px;}
+    .banner-section {padding-top: 60px; height: 803px;}
     .banner-section .container {flex-direction: column;  width: 100%; scale: 0.85; padding: 0; align-items: center;}
     .banner-section .container .col1 {text-align: center;  margin: auto; margin-bottom: 43px;}
     .banner-section .container .col2 {padding-bottom: 5px; margin-right: 0; margin: auto;}
@@ -152,7 +156,7 @@ button:hover {cursor: pointer;}
 
 .brands-slider-section .container .carousel .slick-prev::before {font-family: 'FontAwesome'; content: '\f053';color:  var(--blue); }
 
-.brands-slider-section .container .carousel .slick-dots {display: none;}
+
 
 
 
@@ -168,3 +172,49 @@ button:hover {cursor: pointer;}
 }
 
 /* longtext */
+
+/* slide2services */
+
+.slide2-section .container {margin: auto; text-align: center; flex-wrap: wrap; justify-content: space-between;}
+
+.slide2-section .card {max-width: 500px; margin-bottom: 100px;}
+
+.slide2-section .card img {margin: auto;}
+
+.slide2-section .card h3 {padding: 15px 0;}
+
+.slide2-section .container.mobile {display: none;}
+
+@media (max-width: 1366px){
+    .slide2-section .card { margin: auto; padding-bottom: 40px;}
+
+}
+
+@media (max-width: 900px){
+    .slide2-section .card { scale: 0.85;}
+
+}
+
+
+
+/* banner2 */
+.banner2-section {background-image: url(../images/banner2.jpg); background-repeat: no-repeat; background-position: center; background-size: cover;}
+.banner2-section .container {text-align: left; padding: 50px 0; }
+.banner2-section .container .texts {max-width: 850px;}
+.banner2-section .container h2 {color: white; line-height: 1; padding: 20px 0;}
+.banner2-section .container h5 {font-size: 18px; color: white;}
+
+@media (max-width: 1366px){
+    .banner2-section .texts {scale: 0.85;}
+}
+
+
+@media (max-width: 900px){
+    .banner2-section .texts {text-align: center; }
+    .banner2-section .container h2 {font-size: 48px;}
+
+}
+
+
+
+/* banner2 */
