--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,13 @@
 :root {
     --blue: #007cbf;
     --lightblue: #37a1da;
+    --lightgrey: #f4f5f8;
+    --grey: #b3b3b3;
+    --darkgrey: #666666;
 
 }
+
+.active {color: var(--blue);}
 
 .blue {color: var(--blue);}
 
@@ -199,22 +204,139 @@ button:hover {cursor: pointer;}
 
 /* banner2 */
 .banner2-section {background-image: url(../images/banner2.jpg); background-repeat: no-repeat; background-position: center; background-size: cover;}
-.banner2-section .container {text-align: left; padding: 50px 0; }
+.banner2-section .container {text-align: left; padding: 50px 0; margin: auto;}
 .banner2-section .container .texts {max-width: 850px;}
-.banner2-section .container h2 {color: white; line-height: 1; padding: 20px 0;}
+.banner2-section .container h2 {color: white; line-height: 1; padding: 20px 0; font-size: 50px;}
 .banner2-section .container h5 {font-size: 18px; color: white;}
 
-@media (max-width: 1366px){
+/* @media (max-width: 1366px){
     .banner2-section .texts {scale: 0.85;}
-}
+} */
 
 
 @media (max-width: 900px){
-    .banner2-section .texts {text-align: center; }
-    .banner2-section .container h2 {font-size: 48px;}
+    .banner2-section .texts {text-align: center; word-break: break-all;}
+    .banner2-section .container  {width: 90%;}
+    .banner2-section .container h2 {font-size: 42px;}
+    .banner2-section .container h5 {font-size: 15px;}
+    .banner2-section .container button {scale: 0.85;}
 
 }
 
 
 
 /* banner2 */
+
+/* contact */
+
+.contact-forms-section {background-color: var(--blue);}
+
+.contact-forms-section .lightblue-line {background-color: var(--lightblue); height: 35px; margin-bottom: 80px;}
+
+.contact-forms-section .container {margin: auto; padding-bottom: 80px;}
+
+
+.contact-forms-section .container .first-col h3 {color: white; font-size: 35px; padding: 0;}
+.contact-forms-section .container .first-col {width: 50%;}
+.contact-forms-section .container .form {width: 50%; margin-top: 13px; max-width: 500px;}
+
+.contact-forms-section .container .form button.send {background-color: white; color: var(--blue);  height: 100%;border-radius: 0px ;border-top-right-radius: 10px; border-bottom-right-radius: 10px; margin: 0; border: 1px solid white;}
+
+
+.contact-forms-section .container .form input {background-color: var(--blue); border: 1px solid white; width: 100%; padding: 15px 0; font-weight: 300; border-radius: 10px; }
+
+.contact-forms-section .container .form .input2 {margin-top: 5px;}
+.contact-forms-section .container .form .input2 input {border-top-right-radius: 0px; border-bottom-right-radius: 0px; } 
+.contact-forms-section .container .form ::placeholder {color: white; padding: 0 20px;}
+
+@media (max-width: 1300px){
+    .contact-forms-section .container .first-col h3 {margin-bottom: 20px;}
+
+    .contact-forms-section .container {flex-direction: column; justify-content: center;  }
+
+    .contact-forms-section .container .first-col {width: 100%; }
+
+    .contact-forms-section .container .form {width: 100%; max-width: 700px;}
+}
+
+@media (max-width: 900px){
+    .contact-forms-section .container {flex-direction: column; justify-content: center; text-align: center;}
+
+    .contact-forms-section .container .first-col {width: 100%; max-width: none;}
+
+    .contact-forms-section .container .form {width: 100%; max-width: none;}
+}
+
+/* contact */
+
+/* footer */
+
+/* main */
+
+
+
+footer .main-footer .container {margin: auto; margin-top: 60px; margin-bottom: 40px;}
+
+footer .main-footer .container h5 {font-size: 15px;}
+
+footer .main-footer .container ul li {margin-bottom: 10px;}
+
+footer .main-footer .container ul li.d-flex {column-gap: 5px;}
+
+.grey-circle {color: white; background-color: #a5a5a5; border-radius: 50%; padding: 5px; height: 16px; width: 16px; display: flex; justify-content: center; font-size: 14px; align-items: center;}
+
+.count-2 {column-count: 2;}
+
+
+@media (max-width: 1100px){
+    footer .main-footer .container {flex-direction: column; text-align: center; justify-content: center; row-gap: 20px;}
+    footer .main-footer .container * {margin: auto;}
+    footer .main-footer .container .list ul {margin: 20px 0;}
+
+
+}
+
+/* main */
+
+/* logo */
+
+footer .logo-section .container {margin: auto; padding: 40px 45px; border-top: 1px solid var(--grey);}
+
+footer .logo-section .container a {color: var(--darkgrey);}
+
+footer .logo-section .container div {column-gap: 60px;}
+
+@media (max-width: 800px) {
+    footer .logo-section .container {flex-direction: column; justify-content: center;  }
+    footer .logo-section .container img {margin: auto; margin-bottom: 20px;}
+    footer .logo-section .container .links {margin: auto; }
+
+}
+
+/* logo */
+
+/* greybar */
+
+footer .grey-bar {background-color: var(--lightgrey); padding-top: 20px; }
+
+
+
+footer .grey-bar .container {margin: auto; padding-bottom: 30px;}
+
+footer .grey-bar .container p {font-size: 15px;}
+
+footer .grey-bar .container div.d-flex {column-gap: 20px;}
+
+@media (max-width: 800px) {
+    footer .grey-bar .container {flex-direction: column;justify-content: center; row-gap: 10px;}
+}
+
+/* greybar */
+
+footer li, footer a {font-family: 'Open Sans', sans-serif; font-size: 15px; font-weight: 400;}
+
+.tiny {border-bottom: 2px solid black; width: 30px; padding-top: 10px; margin-bottom: 20px  ;}
+
+.pad5 {padding-right: 5px;}
+
+/* footer */
