--- a/css/styles.css
+++ b/css/styles.css
@@ -304,10 +304,10 @@ footer .logo-section .container {margin: auto; padding: 40px 45px; border-top: 1
 
 footer .logo-section .container a {color: var(--darkgrey);}
 
-footer .logo-section .container div {column-gap: 60px;}
+footer .logo-section .container div {column-gap: 5vw;}
 
 @media (max-width: 800px) {
-    footer .logo-section .container {flex-direction: column; justify-content: center;  }
+    footer .logo-section .container {flex-direction: column; justify-content: center; padding: 40px 0;  }
     footer .logo-section .container img {margin: auto; margin-bottom: 20px;}
     footer .logo-section .container .links {margin: auto; }
 
