--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,10 @@ button:hover {cursor: pointer; transition: 0.6s all; background-color: var(--lig
 .slick-initialized .slick-track {
     display: flex;
     align-items: center;
+    
 }
+
+
 
 .brands-slider-section {background-color: #fafafa;}
 
@@ -256,7 +259,7 @@ button:hover {cursor: pointer; transition: 0.6s all; background-color: var(--lig
 
 
 @media (max-width: 900px){
-    .banner2-section .texts {text-align: center; word-break: break-all;}
+    .banner2-section .texts {text-align: center; }
     .banner2-section .container  {width: 90%;}
     .banner2-section .container h2 {font-size: 42px;}
     .banner2-section .container h5 {font-size: 15px;}
