--- a/css/styles.css
+++ b/css/styles.css
@@ -347,7 +347,7 @@ footer .main-footer .container ul li.d-flex {column-gap: 5px;}
 
 .grey-circle {color: white; background-color: #a5a5a5; border-radius: 50%; padding: 5px; height: 16px; width: 16px; display: flex; justify-content: center; font-size: 14px; align-items: center;}
 
-.grey-circle:hover {transition: 0.6s all; background-color: var(--blue); height: 20px;}
+.grey-circle:hover {transition: 0.6s all; background-color: var(--blue); height: 20px; width: 20px;}
 
 .count-2 {column-count: 2;}
 
