--- a/css/styles.css
+++ b/css/styles.css
@@ -301,6 +301,8 @@ button:hover {cursor: pointer; transition: 0.6s all; background-color: var(--lig
 
 
 @media (max-width: 1300px){
+    .contact-forms-section .lightblue-line {margin-bottom: 35px;}
+  
     .contact-forms-section .container .first-col h3 {margin-bottom: 20px;}
 
     .contact-forms-section .container {flex-direction: column; justify-content: center;  }
