height auto section 1

--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,7 @@ button:hover {cursor: pointer; transition: 0.6s all; background-color: var(--lig
 
 .banner-section {height: auto;}
 
-.banner-section {background-image: url(../images/banner.jpg); background-repeat: no-repeat; background-position: center; background-size: cover; height: 795px;  width: 100%; padding-top: 120px;}
+.banner-section {background-image: url(../images/banner.jpg); background-repeat: no-repeat; background-position: center; background-size: cover;  width: 100%; padding-top: 120px;}
 
 .banner-section .container {margin: auto; padding-top: 100px;}
 
