--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,7 @@ button:hover {cursor: pointer; transition: 0.6s all; background-color: var(--lig
 .brands-slider-section .container {margin: auto; padding: 40px 0;}
 
 
-.brands-slider-section .container .item {display: flex; justify-content: center; width: 300px; }
+.brands-slider-section .container .item {display: flex; justify-content: center; width: 300px; scale: 0.8}
 
 .brands-slider-section .container .carousel .slick-next::before {font-family: 'FontAwesome'; content: '\f054'; color:  var(--blue);}
 
