--- a/css/styles.css
+++ b/css/styles.css
@@ -289,7 +289,7 @@ button:hover {cursor: pointer; transition: 0.6s all; background-color: var(--lig
 .contact-forms-section .container .form button.send {background-color: white; color: var(--blue);  height: 100%;border-radius: 0px ;border-top-right-radius: 10px; border-bottom-right-radius: 10px; margin: 0; border: 1px solid white; padding-bottom: 11px;}
 
 
-.contact-forms-section .container .form input {background-color: var(--blue); border: 1px solid white; width: 100%; padding: 15px 0; font-weight: 500; border-radius: 10px; height: 16px;  color: white; padding: 15px; }
+.contact-forms-section .container .form input {background-color: var(--blue); border: 1px solid white; width: 100%; padding: 15px 0; font-weight: 500; border-radius: 10px; height: 48px; color: white; padding: 15px; box-sizing: border-box; font-family: 'Poppins', sans-serif; font-size: 16px;}
 
 .contact-forms-section .container .form input::placeholder {color: white; position: relative;  }
 
@@ -326,7 +326,7 @@ button:hover {cursor: pointer; transition: 0.6s all; background-color: var(--lig
     .contact-forms-section .container .form button.send {background-color: white; color: var(--blue);  height: 100%;border-radius: 10px; margin: 0; border: 1px solid white; width: 100%;}
     .input2 {flex-direction: column; row-gap: 10px;}
     .contact-forms-section .container .form .input2 {width: 100%; align-items: center;}
-    .contact-forms-section .container .form .input2 input {border-radius: 10px;  width: calc(100% - 30px);}
+    .contact-forms-section .container .form .input2 input {border-radius: 10px;  }
 }
 
 
