--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,8 @@ input:focus {outline: none; font-size: 16px; }
 
 ul {list-style: none;}
 
+
+
 img { display: inline-block; max-width: 100%;}
 
 h1 {font-family: 'Poppins', sans-serif; font-size: 80px; font-weight: 500;}
@@ -29,15 +31,15 @@ h3 {font-family: 'Poppins', sans-serif; font-size: 30px; font-weight: 500;}
 
 h4 {font-family: 'Poppins', sans-serif; font-size: 25px; font-weight: 500;}
 
-h5 {font-family: 'Poppins', sans-serif; font-size: 16px; font-weight: 500; letter-spacing: 4px; padding: 0;}
+h5 {font-family: 'Poppins', sans-serif; font-size: 16px; font-weight: 500; letter-spacing: 3px; padding: 0;}
 
-a, button, ::placeholder {font-family: 'Poppins', sans-serif; font-size: 16px; font-weight: 500; text-decoration: none; color: black;}
+a, button, ::placeholder {font-family: 'Poppins', sans-serif; font-size: 16px; font-weight: 500; text-decoration: none; color: black; transition:  0.3s ease-in-out;}
 
 a:hover {color: var(--blue); transition: all 0.6s;}
 
 p {font-family: 'Open Sans', sans-serif; font-size: 16px; font-weight: 400;}
 
-input {border: none; border-bottom: 2px solid;}
+
 
 label {font-family: 'Open Sans', sans-serif; font-size: 15px; font-weight: 400;}
 
@@ -49,14 +51,14 @@ label {font-family: 'Open Sans', sans-serif; font-size: 15px; font-weight: 400;}
 
 .space-between {justify-content: space-between;}
 
-button {background-color: var(--blue); padding: 10px 35px; border: none; border-radius: 15px; color: white; margin-top: 2px;}
+button {background-color: var(--blue); padding: 10px 35px; border: none; border-radius: 15px; color: white; margin-top: 2px; transition:  0.3s ease-in-out;}
 
-button:hover {cursor: pointer; transition: 0.6s all; background-color: var(--lightblue);}
+button:hover {cursor: pointer; transition:  0.6s ease-in-out; background-color: black; color: white;}
 
 
 
 /* header */
-.header-section {box-shadow: 0px 2px 10px grey; position: fixed; width: 100%; background-color: white; z-index: 1;}
+.header-section {box-shadow: 0px 2px 10px rgb(196, 196, 196); position: fixed; width: 100%; background-color: white; z-index: 1;}
 
 .header-section .container {margin: auto; padding: 30px 0;}
 
@@ -68,15 +70,17 @@ button:hover {cursor: pointer; transition: 0.6s all; background-color: var(--lig
 
 .burgermenu {display: none;}
 .burgermenu {width: 100%; text-align: center; }
-.burgermenu li {padding: 20px 0; border-bottom: 1px solid rgb(192, 192, 192);}
+.burgermenu li {padding: 20px 0; border-bottom: 1px solid rgb(218, 218, 218);}
 .mobile-menu {display: none;}
 
+.ptop0 {padding-top: 0px !important;}
 @media (max-width: 1366px) {
-  
+    .navbar {column-gap: 20px;}
     .header-section a, .header-section button {font-size: 15px;}
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 992px) {
+    .header-section .container {margin: auto; padding: 30px 0;}
     .mobile-menu {display: block;}
     .header-section .navbar {display: none;}
     .fa-bars {display: block; color: var(--blue); font-size: 35px;}
@@ -105,31 +109,53 @@ button:hover {cursor: pointer; transition: 0.6s all; background-color: var(--lig
 
 .banner-section .container .first-heading img {top: 10px;}
 
-.banner-section .container .text-logo {color: white; line-height: 50px;}
+.banner-section .container .text-logo {color: white; line-height: 30px;}
 
-.banner-section .container .text-logo img {padding-top: 5px; padding-right: 20px;}
+.banner-section .container .text-logo img {padding-top: 5px; padding-right: 20px; left: 0.5vw;}
 
 .banner-section .container .text-logo h5 {letter-spacing: 3px; padding: 15px 0; line-height: 1.5;}
 
 .banner-section .container .col2 {background-color: white; padding: 40px; margin-right: 40px; padding-bottom: 73px; height: 100%; max-width: 500px;}
 
-.banner-section .container .col2 h3 {padding: 0;}
 
-.banner-section .container .col2 h3 span {border-bottom: 3px solid var(--blue); padding: 0;}
+.banner-section .container .col2 div.d-flex {flex-wrap: wrap; line-height: 130%; margin-bottom: 15px;}
+
+
+.banner-section .container .col2 div.d-flex h3.first { margin-right: 10px;}
+
+@media (max-width: 1394px){
+    .banner-section .container .col2 div.d-flex h3.first { margin-bottom: 20px;}
+}
+
+.banner-section .container .col2 div.d-flex h3 {margin-bottom: 5px;}
+
+.banner-section .container .col2 div.d-flex .blueline {width: 100%; border-bottom: 3px solid var(--blue);}
+
+
 
 .banner-section .container .col2 form.d-flex{flex-direction: column;}
 
-.banner-section .container .col2 h3 {margin-bottom: 20px;}
+.banner-section .container {column-gap: 40px;}
 
 .banner-section .container .col2 label {padding-bottom: 20px; padding-top: 10px;}
 
-.banner-section .container .col2 .send-logo {padding: 30px 15px; padding-bottom: 0px;}
+.banner-section .container .col2 .send-logo {padding: 30px 15px; padding-bottom: 0px; column-gap: 20px; row-gap: 20px; justify-content: center;}
 
 .banner-section .container .first-heading {max-width: 600px;}
 
 .banner-section .container .first-heading img {position: relative; top: 10px;  }
+@media (max-width: 1042px) {
+    .banner-section .container .first-heading img {margin-bottom: 23px;}
+}
 
-@media (max-width: 1240px){
+.banner-section .container .text-logo h5 {margin-bottom: 10px;}
+
+.banner-section .container input {border: none; border-bottom: 2px solid; margin-bottom: 8px; font-size: 16px;}
+
+@media (max-width: 992px){
+    .banner-section .container .first-heading img {margin-bottom: 0px;}
+    .banner-section .container .text-logo h5 {margin-bottom: 0px; padding-bottom: 0px;}
+    .banner-section .container .text-logo {line-height: 60px;}
     .banner-section .container .col2 {min-width: 0;}
     .banner-section {height: auto;}
     .banner-section .container {flex-direction: column; align-items: center; padding-top: 20px;}
@@ -150,6 +176,8 @@ button:hover {cursor: pointer; transition: 0.6s all; background-color: var(--lig
 }
 
 @media (max-width: 525px) {
+    .banner-section .container .text-logo {line-height: 40px;}
+    
     .banner-section .container .first-heading img {margin-bottom: 20px; left: 11px;}
 }
 
@@ -186,8 +214,8 @@ button:hover {cursor: pointer; transition: 0.6s all; background-color: var(--lig
 
 /* longtext */
 
-.text-section .container {margin: auto; text-align: center; padding: 120px 0; display: flex; flex-direction: column; row-gap: 40px;}
-.text-section .container span {color: var(--lightblue);}
+.text-section .container {margin: auto; text-align: center; padding: 40px 0; display: flex; flex-direction: column; row-gap: 20px; }
+.text-section .container span {color: #2bcaef;}
 
 @media (max-width: 1366px) {
     .text-section .container h4 {scale: 0.85;}
@@ -201,14 +229,18 @@ button:hover {cursor: pointer; transition: 0.6s all; background-color: var(--lig
 .frist-section .container {margin: auto;}
 .frist-section .container h5 {color: var(--grey); margin: auto; text-align: center; letter-spacing: 2px;}
 .frist {display: block;}
-.frist-mobile {display: none;}
+.frist-mobile {display: none;  }
+.frist-mobile h1 {line-height: 120%;}
 
 .big-title{
+    margin-top: 40px;
     position:relative;
     white-space: nowrap;
    left: -30vw
     
   }
+
+
 
 
 @media (max-width: 1000px){
@@ -226,11 +258,13 @@ button:hover {cursor: pointer; transition: 0.6s all; background-color: var(--lig
 
 /* slide2services */
 
-.slide2-section .container {margin: auto; text-align: center; flex-wrap: wrap; justify-content: space-between;}
+.mtop0 {margin-top: 0px !important;}
 
-.slide2-section .card {max-width: 500px; margin-bottom: 100px;}
+.slide2-section .container {margin: auto; text-align: center; flex-wrap: wrap; justify-content: space-between; margin-bottom: 40px;}
 
-.slide2-section .card img {margin: auto;}
+.slide2-section .card {max-width: 500px; margin-bottom: 50px; margin-top: 0px;}
+
+.slide2-section .card img {margin: auto; height: 98px;}
 
 .slide2-section .card h3 {padding: 15px 0;}
 
@@ -262,7 +296,7 @@ button:hover {cursor: pointer; transition: 0.6s all; background-color: var(--lig
 
 @media (max-width: 900px){
     .banner2-section .texts {text-align: center; }
-    .banner2-section .container  {width: 90%;}
+    .banner2-section .container  {width: 80%;}
     .banner2-section .container h2 {font-size: 42px;}
     .banner2-section .container h5 {font-size: 15px;}
     .banner2-section .container button {scale: 0.85;}
@@ -275,21 +309,23 @@ button:hover {cursor: pointer; transition: 0.6s all; background-color: var(--lig
 
 /* contact */
 
-.contact-forms-section {background-color: var(--blue);}
-
-.contact-forms-section .lightblue-line {background-color: var(--lightblue); height: 35px; margin-bottom: 80px;}
-
-.contact-forms-section .container {margin: auto; padding-bottom: 80px;}
+.contact-forms-section {background-color: var(--blue); border-top: solid 35px var(--lightblue); padding: 60px 0;}
 
 
-.contact-forms-section .container .first-col h3 {color: white; font-size: 35px; padding: 0;}
+
+.contact-forms-section .container {margin: auto; }
+
+
+.contact-forms-section .container .first-col h3 {color: white; font-size: 35px; padding: 0; line-height: 130%;}
 .contact-forms-section .container .first-col {width: 50%;}
 .contact-forms-section .container .form {width: 50%; margin-top: 13px; max-width: 500px;}
 
-.contact-forms-section .container .form button.send {background-color: white; color: var(--blue);  height: 100%;border-radius: 0px ;border-top-right-radius: 10px; border-bottom-right-radius: 10px; margin: 0; border: 1px solid white; padding-bottom: 11px;}
+.contact-forms-section .container .form button.send {background-color: white; color: var(--blue);  height: 100%;border-radius: 0px ;border-top-right-radius: 8px; border-bottom-right-radius: 8px; margin: 0; border: 1px solid white; padding-bottom: 11px; transition: 0.6s ease-in;}
+
+.contact-forms-section .container .form button.send:hover {background-color: black; color: white; transition: 0.6s ease-in; border: 1px solid black;}
 
 
-.contact-forms-section .container .form input {background-color: var(--blue); border: 1px solid white; width: 100%; padding: 15px 0; font-weight: 500; border-radius: 10px; height: 48px; color: white; padding: 15px; box-sizing: border-box; font-family: 'Poppins', sans-serif; font-size: 16px;}
+.contact-forms-section .container .form input {background-color: var(--blue); border: 1px solid white; width: 100%; padding: 15px 0; font-weight: 500; border-radius: 8px; height: 48px; color: white; padding: 15px; box-sizing: border-box; font-family: 'Poppins', sans-serif; font-size: 16px;}
 
 .contact-forms-section .container .form input::placeholder {color: white; position: relative;  }
 
@@ -303,13 +339,15 @@ button:hover {cursor: pointer; transition: 0.6s all; background-color: var(--lig
 @media (max-width: 1300px){
     .contact-forms-section .lightblue-line {margin-bottom: 35px;}
   
-    .contact-forms-section .container .first-col h3 {margin-bottom: 20px;}
+    .contact-forms-section .container .first-col h3 {margin-bottom: 20px; min-width: 100%;}
 
     .contact-forms-section .container {flex-direction: column; justify-content: center;  }
 
     .contact-forms-section .container .first-col {width: 100%; }
 
-    .contact-forms-section .container .form {width: 100%; max-width: 700px;}
+    .contact-forms-section .container .form {min-width: 100%;}
+
+    .contact-forms-section .container .form input {min-width: calc(100% - 113px);}
 }
 
 @media (max-width: 900px){
@@ -343,11 +381,11 @@ footer .main-footer .container {margin: auto; margin-top: 60px; margin-bottom: 4
 
 footer .main-footer .container h5 {font-size: 15px;}
 
-footer .main-footer .container ul li {margin-bottom: 10px;}
+footer .main-footer .container ul li {margin-bottom: 7px;}
 
 footer .main-footer .container ul li.d-flex {column-gap: 5px;}
 
-.grey-circle {color: white; background-color: #a5a5a5; border-radius: 50%; padding: 5px; height: 16px; width: 16px; display: flex; justify-content: center; font-size: 14px; align-items: center;}
+.grey-circle {color: white; background-color: #a5a5a5; border-radius: 50%; padding: 5px; height: 16px; width: 16px; display: flex; justify-content: center; font-size: 14px; align-items: center; transition:  0.3s ease-in-out;}
 
 .grey-circle:hover {transition: 0.6s all; background-color: var(--blue); height: 20px; width: 20px;}
 
@@ -372,9 +410,11 @@ footer .logo-section .container a {color: var(--darkgrey);}
 
 footer .logo-section .container div {column-gap: 5vw;}
 
+footer .logo-section .container .links {position: relative;bottom: 7px; }
+
 @media (max-width: 800px) {
     footer .logo-section .container {flex-direction: column; justify-content: center; padding: 40px 0;  }
-    footer .logo-section .container img {margin: auto; margin-bottom: 20px;}
+    footer .logo-section .container img {margin: auto; margin-bottom: 30px;}
     footer .logo-section .container .links {margin: auto; }
 
 }
@@ -394,7 +434,7 @@ footer .grey-bar .container p {font-size: 15px;}
 footer .grey-bar .container div.d-flex {column-gap: 20px;}
 
 @media (max-width: 800px) {
-    footer .grey-bar .container {flex-direction: column;justify-content: center; row-gap: 10px; text-align: center;}
+    footer .grey-bar .container {flex-direction: column;justify-content: center; row-gap: 30px; text-align: center;}
     footer .grey-bar .container div.d-flex {column-gap: 20px; justify-content: center;}
 }
 
