--- a/css/styles.css
+++ b/css/styles.css
@@ -148,7 +148,7 @@ button:hover {cursor: pointer; transition:  0.6s ease-in-out; background-color: 
     .banner-section .container .first-heading img {margin-bottom: 23px;}
 }
 
-.banner-section .container .text-logo h5 {margin-bottom: 10px;}
+
 
 .banner-section .container input {border: none; border-bottom: 2px solid; margin-bottom: 8px; font-size: 16px;}
 
@@ -176,9 +176,15 @@ button:hover {cursor: pointer; transition:  0.6s ease-in-out; background-color: 
 }
 
 @media (max-width: 525px) {
+
+    .banner-section .container .text-logo h5 {margin-bottom: 0px; padding-bottom: 15px;}
     .banner-section .container .text-logo {line-height: 40px;}
     
     .banner-section .container .first-heading img {margin-bottom: 20px; left: 11px;}
+}
+@media (max-width: 395px){
+    .banner-section .container .text-logo {line-height: 1; row-gap: 10px;}
+    .banner-section .container .first-heading img {margin: 0; padding-top: 0; position: relative; bottom: 5px; }
 }
 
 
@@ -252,6 +258,13 @@ button:hover {cursor: pointer; transition:  0.6s ease-in-out; background-color: 
     .frist-mobile {display: block; margin: auto;}
     .frist-mobile h1 {font-size: 60px; text-align: center;}
 }
+
+@media (max-width: 500px){
+    .frist {display: none;}
+    .frist-mobile {display: block; margin: auto;}
+    .frist-mobile h1 {font-size: 45px; text-align: center;}
+}
+
 
 
   /* FRIST */
