--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ button:hover {cursor: pointer; transition:  0.6s ease-in-out; background-color: 
 
 
 /* header */
-.header-section {box-shadow: 0px 2px 10px rgb(196, 196, 196); position: fixed; width: 100%; background-color: white; z-index: 1;}
+.header-section {box-shadow: 0 2px 5px rgb(0 0 0 / 10%); position: fixed; width: 100%; background-color: white; z-index: 1;}
 
 .header-section .container {margin: auto; padding: 30px 0;}
 
@@ -111,11 +111,11 @@ button:hover {cursor: pointer; transition:  0.6s ease-in-out; background-color: 
 
 .banner-section .container .text-logo {color: white; line-height: 30px;}
 
-.banner-section .container .text-logo img {padding-top: 5px; padding-right: 20px; left: 0.5vw;}
+.banner-section .container .text-logo img {padding-top: 5px; padding-right: 20px; left: 3px;}
 
-.banner-section .container .text-logo h5 {letter-spacing: 3px; padding: 15px 0; line-height: 1.5;}
+.banner-section .container .text-logo h5 {letter-spacing: 3px; margin: 15px 0 30px 0; line-height: 1.5;}
 
-.banner-section .container .col2 {background-color: white; padding: 40px; margin-right: 40px; padding-bottom: 73px; height: 100%; max-width: 500px;}
+.banner-section .container .col2 {background-color: white; padding: 40px; margin-right: 40px; padding-bottom: 50px; height: 100%; max-width: 500px;}
 
 
 .banner-section .container .col2 div.d-flex {flex-wrap: wrap; line-height: 130%; margin-bottom: 15px;}
@@ -146,15 +146,15 @@ button:hover {cursor: pointer; transition:  0.6s ease-in-out; background-color: 
 .banner-section .container .first-heading img {position: relative; top: 10px;  }
 @media (max-width: 1042px) {
     .banner-section .container .first-heading img {margin-bottom: 23px;}
+    
 }
 
 
 
-.banner-section .container input {border: none; border-bottom: 2px solid; margin-bottom: 8px; font-size: 16px;}
+.banner-section .container input {border: none; border-bottom: 2px solid; margin-bottom: 8px; font-size: 16px; padding-bottom: 8px;}
 
 @media (max-width: 992px){
-    .banner-section .container .first-heading img {margin-bottom: 0px;}
-    .banner-section .container .text-logo h5 {margin-bottom: 0px; padding-bottom: 0px;}
+    .banner-section .container .first-heading img { top: 33px;}
     .banner-section .container .text-logo {line-height: 60px;}
     .banner-section .container .col2 {min-width: 0;}
     .banner-section {height: auto;}
@@ -169,20 +169,24 @@ button:hover {cursor: pointer; transition:  0.6s ease-in-out; background-color: 
     .banner-section .container .text-logo img {height: 62px;}
 }
 
+@media(max-width: 711px){
+    .banner-section .container .text-logo h2 { line-height: 0.8; }
+    .banner-section .container .text-logo h5 {margin-bottom: 35px;}
+}
 
 @media (max-width: 600px) {
     .banner-section .container .send-logo { flex-direction: column; row-gap: 20px;}
     .banner-section .container h2.d-flex {display: block;}
 }
 
-@media (max-width: 525px) {
+@media (max-width: 528px) {
 
-    .banner-section .container .text-logo h5 {margin-bottom: 0px; padding-bottom: 15px;}
-    .banner-section .container .text-logo {line-height: 40px;}
+    .banner-section .container .text-logo h2 { line-height: 0.8; }
     
-    .banner-section .container .first-heading img {margin-bottom: 20px; left: 11px;}
+    .banner-section .container .first-heading img {margin-bottom: 20px; left: 11px; top: 10px;}
 }
 @media (max-width: 395px){
+    .banner-section .container .text-logo h2 { line-height: 1.2; }
     .banner-section .container .text-logo {line-height: 1; row-gap: 10px;}
     .banner-section .container .first-heading img {margin: 0; padding-top: 0; position: relative; bottom: 5px; }
 }
@@ -220,12 +224,10 @@ button:hover {cursor: pointer; transition:  0.6s ease-in-out; background-color: 
 
 /* longtext */
 
-.text-section .container {margin: auto; text-align: center; padding: 40px 0; display: flex; flex-direction: column; row-gap: 20px; }
+.text-section .container {margin: auto; text-align: center; padding: 80px 0; display: flex; flex-direction: column; row-gap: 20px; }
 .text-section .container span {color: #2bcaef;}
 
-@media (max-width: 1366px) {
-    .text-section .container h4 {scale: 0.85;}
-}
+
 
 /* longtext */
 
@@ -275,7 +277,7 @@ button:hover {cursor: pointer; transition:  0.6s ease-in-out; background-color: 
 
 .slide2-section .container {margin: auto; text-align: center; flex-wrap: wrap; justify-content: space-between; margin-bottom: 40px;}
 
-.slide2-section .card {max-width: 500px; margin-bottom: 50px; margin-top: 0px;}
+.slide2-section .card {max-width: 500px; margin-bottom: 75px; margin-top: 0px;}
 
 .slide2-section .card img {margin: auto; height: 98px;}
 
@@ -284,14 +286,11 @@ button:hover {cursor: pointer; transition:  0.6s ease-in-out; background-color: 
 .slide2-section .container.mobile {display: none;}
 
 @media (max-width: 1366px){
-    .slide2-section .card { margin: auto; padding-bottom: 40px;}
+    .slide2-section .card { margin: auto; margin-bottom: 75px}
 
 }
 
-@media (max-width: 900px){
-    .slide2-section .card { scale: 0.85;}
 
-}
 
 
 
@@ -400,12 +399,18 @@ footer .main-footer .container ul li.d-flex {column-gap: 5px;}
 
 .grey-circle {color: white; background-color: #a5a5a5; border-radius: 50%; padding: 5px; height: 16px; width: 16px; display: flex; justify-content: center; font-size: 14px; align-items: center; transition:  0.3s ease-in-out;}
 
-.grey-circle:hover {transition: 0.6s all; background-color: var(--blue); height: 20px; width: 20px;}
+.grey-circle:hover {transition: 0.6s all; background-color: var(--blue);}
 
 .count-2 {column-count: 2;}
 
+footer .main-footer .aligned {position: relative;right: 22px;}
+
+footer .main-footer .aligned i {position: relative;right: 5px;}
+
 
 @media (max-width: 1100px){
+    footer .main-footer .aligned i {position: relative;right: 5px;}
+    footer .main-footer .aligned {position: relative;right: 0px;}
     footer .main-footer .container {flex-direction: column; text-align: center; justify-content: center; row-gap: 20px;}
     footer .main-footer .container * {margin: auto;}
     footer .main-footer .container .list ul {margin: 20px 0;}
