--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,7 @@ button:hover {cursor: pointer; transition:  0.6s ease-in-out; background-color: 
 
 .banner-section .container {column-gap: 40px;}
 
-.banner-section .container .col2 label {padding-bottom: 10px; padding-top: 10px;}
+.banner-section .container .col2 label {padding-bottom: 10px; padding-top: 10px; font-size: 16px;}
 
 .banner-section .container .col2 .send-logo {padding: 30px 15px; padding-bottom: 0px; column-gap: 20px; row-gap: 20px; justify-content: center;}
 
@@ -151,7 +151,7 @@ button:hover {cursor: pointer; transition:  0.6s ease-in-out; background-color: 
 
 
 
-.banner-section .container input {border: none; border-bottom: 2px solid; margin-bottom: 8px; font-size: 15px; padding-bottom: 8px; font-family: 'Open Sans', sans-serif; font-weight: 400; font-size: 15px;}
+.banner-section .container input {border: none; border-bottom: 2px solid; margin-bottom: 8px; font-size: 16px; padding-bottom: 8px; font-family: 'Open Sans', sans-serif; font-weight: 400; }
 
 @media (max-width: 992px){
     .banner-section .container .text-logo h5 {margin-bottom: 0px;}
