--- a/css/styles.css
+++ b/css/styles.css
@@ -278,21 +278,35 @@ button:hover {cursor: pointer; transition:  0.6s ease-in-out; background-color: 
 
 .mtop0 {margin-top: 0px !important;}
 
-.slide2-section .container {margin: auto; text-align: center; flex-wrap: wrap; justify-content: space-between; margin-bottom: 40px;}
+.slide2-section .container {margin: auto; flex-wrap: wrap; justify-content: space-between; margin-bottom: 40px; row-gap: 10px;}
 
-.slide2-section .card {max-width: 500px; margin-bottom: 75px; margin-top: 0px;}
+.slide2-section .card {max-width: 470px; min-height: 202px;  margin-top: 0px; background-color: #fafafa; padding: 40px 50px; border-radius: 10px; column-gap: 30px;}
 
-.slide2-section .card img {margin: auto; height: 98px;}
+.slide2-section .card img {height: 80px;}
 
-.slide2-section .card h3 {padding: 15px 0;}
+.slide2-section .card .texts {width: 70%; text-align: left;}
+
+.slide2-section .card h3 {padding-bottom: 10px; color: black; font-size: 25px;}
+
+
+.slide2-section .item .blue-circle {display: flex; transition: 0.5s; font-size: 24px; font-family: "Poppins", sans-serif; border-radius: 100px; background-color: #00a6f3; color: white; padding: 10px; width: 35px; justify-content: center; align-items: center;}
+
+.slide2-section .item .blue-circle {position: relative; top: 32px; right: 20px; cursor: pointer;}
+
+.slide2-section .item .blue-circle:hover {transition: 0.5s; border: 5px solid #b2d7ec;}
 
 .slide2-section .container.mobile {display: none;}
 
 @media (max-width: 1366px){
-    .slide2-section .card { margin: auto; margin-bottom: 75px}
+    .slide2-section .container {justify-content: center; row-gap: 10px;}
+    .slide2-section .card { margin: auto;}
 
 }
+@media (max-width: 767px) {
+    .slide2-section .card {display: block; max-height: none; text-align: center;}
+    .slide2-section .card .texts {width: 100%; text-align: center;}
 
+}
 
 
 
