--- a/css/styles.css
+++ b/css/styles.css
@@ -278,9 +278,11 @@ button:hover {cursor: pointer; transition:  0.6s ease-in-out; background-color: 
 
 .mtop0 {margin-top: 0px !important;}
 
-.slide2-section .container {margin: auto; flex-wrap: wrap; justify-content: space-between; margin-bottom: 40px; row-gap: 10px; column-gap: 40px;}
+.slide2-section .container {display: flex; flex-direction: column;margin: auto;  justify-content: space-between; margin-bottom: 40px; row-gap: 10px; column-gap: 40px;}
 
-.slide2-section .card {max-width: 470px; min-height: 202px;  margin-top: 0px; background-color: #fafafa; padding: 40px 50px; border-radius: 10px; column-gap: 30px;}
+.slide2-section .container .row {column-gap: 60px;}
+
+.slide2-section .card {max-width: 470px; min-height: 210px;  margin-top: 0px; background-color: #fafafa; padding: 40px 50px; border-radius: 10px; column-gap: 30px;}
 
 .slide2-section .card img {height: 80px;}
 
@@ -288,6 +290,7 @@ button:hover {cursor: pointer; transition:  0.6s ease-in-out; background-color: 
 
 .slide2-section .card h3 {padding-bottom: 10px; color: black; font-size: 25px;}
 
+.slide2-section .card p {font-weight: 500;}
 
 .slide2-section .item .blue-circle {display: flex; transition: 0.5s; font-size: 24px; font-family: "Poppins", sans-serif; border-radius: 100px; background-color: #00a6f3; color: white; padding: 10px; width: 35px; justify-content: center; align-items: center;}
 
@@ -295,13 +298,20 @@ button:hover {cursor: pointer; transition:  0.6s ease-in-out; background-color: 
 
 .slide2-section .item .blue-circle:hover {transition: 0.5s;  box-shadow: 0 0 0 10px rgba(178, 215, 236, 0.5);}
 
-.slide2-section .container.mobile {display: none;}
+@media (max-width: 1430px){
+    .slide2-section .card {height: 65%;}
+}
 
-@media (max-width: 1480px){
-    .slide2-section .container {justify-content: center; row-gap: 10px;}
+@media (max-width: 1250px){
     .slide2-section .card { margin: auto;}
     .slide2-section .card {display: block; max-height: none; text-align: center;}
     .slide2-section .card .texts {width: 100%; text-align: center;}
+}
+
+@media (max-width: 1000px){
+    .slide2-section .container {max-width: 570px;}
+    .slide2-section .container .row {flex-direction: column;justify-content: center; row-gap: 10px;}
+
 
 }
 
