--- a/css/styles.css
+++ b/css/styles.css
@@ -419,7 +419,7 @@ footer .main-footer .container ul li.d-flex {column-gap: 5px;}
 
 .grey-circle:hover {transition: 0.6s all; background-color: var(--blue);}
 
-.count-2 {column-count: 2;}
+.count-2 {column-count: 3;}
 
 footer .main-footer .aligned {position: relative;right: 22px;}
 
@@ -429,7 +429,7 @@ footer .main-footer .aligned i {position: relative;right: 5px;}
 
 .row10 {row-gap: 10px;}
 
-.row25 {row-gap: 25px;}
+.row25 {row-gap: 24px;}
 
 
 @media (max-width: 1100px){
@@ -489,6 +489,9 @@ footer li, footer a {font-family: 'Open Sans', sans-serif; font-size: 15px; font
 .tiny {border-bottom: 2px solid black; width: 30px; padding-top: 10px; margin-bottom: 20px  ;}
 
 .pad5 {padding-right: 5px;}
+
+.bottom-one {position: relative; top: 30px;}
+.bottom-two {position: relative; top: 30px;}
 
 /* footer */
 
