--- a/css/styles.css
+++ b/css/styles.css
@@ -493,6 +493,12 @@ footer li, footer a {font-family: 'Open Sans', sans-serif; font-size: 15px; font
 .bottom-one {position: relative; top: 30px;}
 .bottom-two {position: relative; top: 30px;}
 
+
+@media (max-width: 1100px){
+    .bottom-one {position: relative; top: 0px;}
+.bottom-two {position: relative; top: 0px;}
+}
+
 /* footer */
 
 
